--- a/templates/carpark_availability.html
+++ b/templates/carpark_availability.html
@@ -30,7 +30,16 @@
             from { -webkit-transform: rotate(0deg); }
             to { -webkit-transform: rotate(360deg); }
         }
+
+        #spinner {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            min-height: 100vh;
+}
     </style>
+    
 </head>
 
 <body>
@@ -39,14 +48,8 @@
     </div>
 
     <script type="text/x-template" id="carpark-vue-component-template">
-        
-        
         <div class="p-3">
-            <div class="text-center mt-5" v-if="loading" style="display: flex;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-            min-height: 100vh;">
+            <div class="text-center mt-5" v-if="loading" id="spinner">
                 <button class="btn btn-lg btn-warning" >
                     <span class="glyphicon glyphicon-refresh spinning"></span> Loading...    
                 </button>
