--- a/templates/carpark_availability.html
+++ b/templates/carpark_availability.html
@@ -1,11 +1,10 @@
 <!doctype html>
 <html lang="en">
-<title>Car Park Availability</title>
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>View Member Details</title>
+    <title>Carpark Availability</title>
     <!-- BootstrapVue CSS & JS -->
     <link type="text/css" rel="stylesheet" href="//unpkg.com/bootstrap-vue@latest/dist/bootstrap-vue.min.css" />
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
@@ -22,9 +21,9 @@
     <!--Personal CSS-->
     <link href="{{ url_for('static', filename='style.css') }}" rel="stylesheet" type="text/css">
 </head>
-
 <body>
-    <nav class="navbar navbar-default">
+    <!--Navbar-->
+    <nav class="navbar navbar-inverse">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -33,7 +32,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/home">Car Park System</a>
+            <a class="navbar-brand" href="/home">Carpark System</a>
             </div>
         
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -46,6 +45,7 @@
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
     </nav>
+    <!--//Navbar-->
 
     <div id="carpark" class="container-fluid wrapper">
         <vue-component></vue-component>
