--- a/templates/view_detail.html
+++ b/templates/view_detail.html
@@ -16,7 +16,8 @@
     <link href="{{ url_for('static', filename='style.css') }}" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <nav class="navbar navbar-default">
+    <!--Navbar-->
+    <nav class="navbar navbar-inverse">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -25,7 +26,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/home">Car Park System</a>
+            <a class="navbar-brand" href="/home">Carpark System</a>
             </div>
         
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -38,5 +39,34 @@
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
     </nav>
+    <!--//Navbar-->
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-8">
+                <!--Jumbotron-->
+                <div class="jumbotron">
+                    <h1 class="text-center">Carpark Availability</h1>
+                    <div class="text-align car">
+                        <img class="img-responsive" style="margin: auto;" alt="" src="../static/car.jpg">
+                    </div>
+                    <div class="text-center">
+                        <button type="button" class="btn btn-success justify-content-center" onclick="window.location.href='/carpark'">View Carpark Availability</button>
+                    </div>
+                </div>
+                <!--//Jumbotrom-->
+            </div>
+            <div class="col-lg-4">
+                <!--Well-->
+                <div class="well">
+                    <h3 class="text-center">Personal Information</h3>
+                    <div class="container">
+                        <h4>Name: {{ first_name }} {{ last_name }}</h4>
+                        <h4>Email: {{ email }}</h4>
+                    </div>
+                </div>
+                <!--//Well-->
+            </div>
+        </div>
+    </div>
 </body>
 </html>
