--- a/templates/register.html
+++ b/templates/register.html
@@ -17,7 +17,7 @@
     <!--Bootstrap JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </head>
-<body>
+<body class="bg-light">
     <div class="container-fluid wrapper" id="register">
         <div class="p-4 row mt-3 text-center">
             <div class="col">
