--- a/templates/carpark_availability.html
+++ b/templates/carpark_availability.html
@@ -18,6 +18,8 @@
     <!--Bootstap CSS & JS-->
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <!--FontAwesome-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!--Personal CSS-->
     <link href="{{ url_for('static', filename='style.css') }}" rel="stylesheet" type="text/css">
 </head>
@@ -32,7 +34,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/home">Carpark System</a>
+            <a class="navbar-brand" href="/home"><i class="fa fa-car"></i>&nbsp;Carpark System</a>
             </div>
         
             <!-- Collect the nav links, forms, and other content for toggling -->
