--- a/templates/view_detail.html
+++ b/templates/view_detail.html
@@ -12,6 +12,8 @@
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <!--FontAwesome-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!--Personal CSS-->
     <link href="{{ url_for('static', filename='style.css') }}" rel="stylesheet" type="text/css">
 </head>
@@ -26,7 +28,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/home">Carpark System</a>
+            <a class="navbar-brand" href="/home"><i class="fa fa-car"></i>&nbsp;Carpark System</a>
             </div>
         
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -42,7 +44,7 @@
     <!--//Navbar-->
     <div class="container-fluid">
         <div class="row">
-            <div class="col-lg-8">
+            <div class="col-lg-8 ">
                 <!--Jumbotron-->
                 <div class="jumbotron">
                     <h1 class="text-center">Carpark Availability</h1>
@@ -59,7 +61,7 @@
                 <!--Well-->
                 <div class="well">
                     <h3 class="text-center">Personal Information</h3>
-                    <div class="container">
+                    <div id="details">
                         <h4>Name: {{ first_name }} {{ last_name }}</h4>
                         <h4>Email: {{ email }}</h4>
                     </div>
