Added contact no ui in register.html

--- a/Q1/templates/register.html
+++ b/Q1/templates/register.html
@@ -16,6 +16,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!--Bootstrap JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <!--Input tel-->
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/16.0.0/css/intlTelInput.css'>
+    
 </head>
 <body class="bg-light">
     <div class="container-fluid wrapper" id="register">
@@ -74,6 +77,11 @@
                         id="email" placeholder="Enter email" v-model="email" name="email" required>
                 </div>
                 <div class="form-group mt-3">
+                    <label for="contactNo">Contact No</label> <br>
+                    <input type="tel" v-bind:class="{'form-control': true, 'is-invalid': validation.email}"
+                        id="contactNo" v-model="contactNo" name="contactNo" required>
+                </div>
+                <div class="form-group mt-3">
                     <label for="password">Password</label>
                     <input type="password"
                         v-bind:class="{'form-control': true, 'is-invalid': validation.password}"
@@ -92,11 +100,13 @@
                     <hr>
                     <a href="/login">I have an account</a>
                 </div>
-
                 <!--//Form Content-->
             </div>
         </div>
     </script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/16.0.0/js/intlTelInput.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/inputmask/4.0.8/jquery.inputmask.bundle.min.js'></script>
     
     <script>
         var vue_component = {
@@ -125,6 +135,7 @@
                 this.first_name = "";
                 this.last_name = "";
                 this.confirmPassword = "";
+                this.contactNo="";
             },
             methods: {
                 add() {
@@ -161,6 +172,8 @@
                         this.validation.confirmPassword = false;
                     }
 
+                    // Validating contact no
+                    
                     // error message
                     if (!this.validation.first_name && !this.validation.last_name && !this.validation.email && !this.validation.password && !this.validation.confirmPassword) { // check if there's empty field
 
@@ -254,6 +267,48 @@
         function validateEmail(email) {
             const re = /^(([^<>()[\]\\.,;:\s@"]+(\.[^<>()[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/;
             return re.test(String(email).toLowerCase());
+        }
+
+        // phone validation
+        var input = document.querySelectorAll("input[name=contactNo]");
+        var iti_el = $('.iti.iti--allow-dropdown.iti--separate-dial-code');
+        if(iti_el.length){
+            iti.destroy();
+			
+			// Get the current number in the given format
+        }
+        for(var i = 0; i < input.length; i++){
+            iti = intlTelInput(input[i], {
+                autoHideDialCode: false,
+                autoPlaceholder: "aggressive" ,
+                initialCountry: "auto",
+                separateDialCode: true,
+                preferredCountries: ['sg'],
+                customPlaceholder:function(selectedCountryPlaceholder,selectedCountryData){
+                    return ''+selectedCountryPlaceholder.replace(/[0-9]/g,'X');
+                },
+                geoIpLookup: function(callback) {
+                    $.get('https://ipinfo.io', function() {}, "jsonp").always(function(resp) {
+                        var countryCode = (resp && resp.country) ? resp.country : "";
+                        callback(countryCode);
+                });
+                },
+                utilsScript: "https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/16.0.0/js/utils.js" 
+        });
+
+        $('input[name="contactNo"]').on("focus click countrychange", function(e, countryData) {
+
+            var pl = $(this).attr('placeholder') + '';
+            var res = pl.replace( /X/g ,'9');
+            if(res != 'undefined'){
+                $(this).inputmask(res, {placeholder: "X", clearMaskOnLostFocus: true});
+            }
+        });
+
+        $('input[name="contactNo"]').on("focusout", function(e, countryData) {
+            var intlNumber = iti.getNumber();
+            console.log(intlNumber);   
+        });
         }
     </script>
 </body>
