--- a/Q1/templates/view_detail.html
+++ b/Q1/templates/view_detail.html
@@ -64,6 +64,7 @@
                     <div id="details">
                         <h4>Name: {{ first_name }} {{ last_name }}</h4>
                         <h4>Email: {{ email }}</h4>
+                        <h4>Contact No: {{ contact_no }}</h4>
                     </div>
                 </div>
                 <!--//Well-->
