--- a/Q1/templates/register.html
+++ b/Q1/templates/register.html
@@ -292,37 +292,42 @@
         var iti_el = $('.iti.iti--allow-dropdown.iti--separate-dial-code');
         if(iti_el.length){
             iti.destroy();
-			
-			// Get the current number in the given format
+		    // Get the current number in the given format
         }
-        for(var i = 0; i < input.length; i++){
-            iti = intlTelInput(input[i], {
-                autoHideDialCode: false,
-                autoPlaceholder: "aggressive" ,
-                initialCountry: "auto",
-                separateDialCode: true,
-                preferredCountries: ['sg'],
-                customPlaceholder:function(selectedCountryPlaceholder,selectedCountryData){
-                    return ''+selectedCountryPlaceholder.replace(/[0-9]/g,'X');
-                },
-                geoIpLookup: function(callback) {
-                    $.get('https://ipinfo.io', function() {}, "jsonp").always(function(resp) {
-                        var countryCode = (resp && resp.country) ? resp.country : "";
-                        callback(countryCode);
-                });
-                },
-                utilsScript: "https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/16.0.0/js/utils.js" 
-        });
 
-        $('input[name="contact_no"]').on("focus click countrychange", function(e, countryData) {
+        $(function () { 
 
-            var pl = $(this).attr('placeholder') + '';
-            var res = pl.replace( /X/g ,'9');
-            if(res != 'undefined'){
-                $(this).inputmask(res, {placeholder: "X", clearMaskOnLostFocus: true});
+            for(var i = 0; i < input.length; i++){
+                iti = intlTelInput(input[i], {
+                    autoHideDialCode: false,
+                    autoPlaceholder: "aggressive" ,
+                    initialCountry: "auto",
+                    separateDialCode: true,
+                    preferredCountries: ['sg'],
+                    customPlaceholder:function(selectedCountryPlaceholder,selectedCountryData){
+                        return ''+selectedCountryPlaceholder.replace(/[0-9]/g,'X');
+                    },
+                    geoIpLookup: function(callback) {
+                        $.get('https://ipinfo.io', function() {}, "jsonp").always(function(resp) {
+                            var countryCode = (resp && resp.country) ? resp.country : "";
+                            callback(countryCode);
+                    });
+                    },
+                    utilsScript: "https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/16.0.0/js/utils.js" 
+            });
+
+            $('input[name="contact_no"]').on("focus click countrychange", function(e, countryData) {
+
+                var pl = $(this).attr('placeholder') + '';
+                var res = pl.replace( /X/g ,'9');
+                if(res != 'undefined'){
+                    $(this).inputmask(res, {placeholder: "X", clearMaskOnLostFocus: true});
+                }
+            });
             }
-        });
-        }
+
+        })
+        
     </script>
 </body>
 </html>
