--- a/Q1/templates/register.html
+++ b/Q1/templates/register.html
@@ -78,7 +78,7 @@
                 </div>
                 <div class="form-group mt-3">
                     <label for="contact_no">Contact No</label> <br>
-                    <input type="text" v-bind:class="{'form-control': true, 'is-invalid': validation.contact_no}"
+                    <input type="text" v-bind:class="{'form-control': true}"
                         id="contact_no" v-model="contact_no" name="contact_no" required>
                 </div>
                 <div class="form-group mt-3">
@@ -123,8 +123,7 @@
                         last_name: false,
                         email: false,
                         password: false,
-                        confirmPassword: false,
-                        contact_no: false
+                        confirmPassword: false
                     },
                     loading: false
                 }
@@ -173,22 +172,12 @@
                         this.validation.confirmPassword = false;
                     }
                     
-                    if (document.getElementById("contact_no").value.includes("X") == false) {
-                        this.contact_no = document.getElementById("contact_no").value;
-                        var iti_el = $('.iti.iti--allow-dropdown.iti--separate-dial-code');
-                        var intlNumber = iti.getNumber();
-                        
-                    }
-            
-                    if (this.contact_no== null || this.contact_no.trim() == "") {
-                        this.validation.contact_no = true;
-                    }
-                    else {
-                        this.validation.contact_no = false;
-                    }
+                    
+                    this.contact_no = document.getElementById("contact_no").value;
+                    
                     
                     // error message
-                    if (!this.validation.first_name && !this.validation.last_name && !this.validation.email && !this.validation.password && !this.validation.confirmPassword && !this.validation.contact_no) { // check if there's empty field
+                    if (!this.validation.first_name && !this.validation.last_name && !this.validation.email && !this.validation.password && !this.validation.confirmPassword) { // check if there's empty field
 
                         // validate email
                         if (!validateEmail(this.email)) {
@@ -225,11 +214,14 @@
                             if (this.first_name != "" && this.last_name != "" && this.email != "" && this.password != "") {
 
                                 const url = "/user/create"
+                                var intlNumber="";
 
                                 // contact number w country code
-                                var iti_el = $('.iti.iti--allow-dropdown.iti--separate-dial-code');
-                                var intlNumber = iti.getNumber();
-
+                                if (document.getElementById("contact_no").value.includes("X") == false) {
+                                    var iti_el = $('.iti.iti--allow-dropdown.iti--separate-dial-code');
+                                    intlNumber = iti.getNumber();
+                                }
+                                
                                 const data = { 
 
                                     "first_name": this.first_name.toLowerCase(),
@@ -301,7 +293,7 @@
                 iti = intlTelInput(input[i], {
                     autoHideDialCode: false,
                     autoPlaceholder: "aggressive" ,
-                    initialCountry: "auto",
+                    initialCountry: "sg",
                     separateDialCode: true,
                     preferredCountries: ['sg'],
                     customPlaceholder:function(selectedCountryPlaceholder,selectedCountryData){
@@ -316,14 +308,32 @@
                     utilsScript: "https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/16.0.0/js/utils.js" 
             });
 
-            $('input[name="contact_no"]').on("focus click countrychange", function(e, countryData) {
+            
 
+            $('input[name="contact_no"]').on("focus click countrychange", function(e, countryData) { 
+
+                var contact_no = document.getElementById("contact_no").value;
+                
+                if (contact_no == "")  {
+                    var pl = $(this).attr('placeholder') + '';
+                    var res = pl.replace( /X/g ,'9');
+                    if(res != 'undefined'){
+                        $(this).inputmask(res, {placeholder: "X", clearMaskOnLostFocus: true});
+                    }
+                }
+
+                
+            });
+
+            $('input[name="contact_no"]').on("countrychange", function(e, countryData) { // when user change the country
+                
                 var pl = $(this).attr('placeholder') + '';
                 var res = pl.replace( /X/g ,'9');
                 if(res != 'undefined'){
                     $(this).inputmask(res, {placeholder: "X", clearMaskOnLostFocus: true});
                 }
             });
+
             }
 
         })
